--- a/src/locales/de/contact-management.json
+++ b/src/locales/de/contact-management.json
@@ -12,7 +12,7 @@
     "fullName": "Vollständiger Name",
     "email": "E-Mail",
     "phone": "Telefon",
-    "mobile": "Mobil",
+    "mobile": "Mobiltelefon",
     "notes": "Notizen",
     "customer": "Kunde",
     "title": "Titel",
@@ -39,7 +39,7 @@
     "phone": "Telefon",
     "phonePlaceholder": "Telefonnummer eingeben (optional)",
     "phoneMaxLength": "Telefon darf maximal 20 Zeichen lang sein",
-    "mobile": "Mobil",
+    "mobile": "Mobiltelefon",
     "mobilePlaceholder": "Mobilnummer eingeben (optional)",
     "mobileMaxLength": "Mobil darf maximal 20 Zeichen lang sein",
     "notes": "Notizen",
