--- a/src/locales/de/daily-tasks.json
+++ b/src/locales/de/daily-tasks.json
@@ -14,7 +14,7 @@
   "noTasks": "Keine Aufgaben gefunden",
   "tasks": "Aufgaben",
   "weeklyTasks": "Wöchentliche Aufgaben",
-  "todoList": "To-Do Liste",
+  "todoList": "Aufgabenliste",
   "dailyList": "Tägliche Liste",
   "calendar": "Kalender",
   "status": "Status:",
