--- a/src/locales/de/pricing-rule.json
+++ b/src/locales/de/pricing-rule.json
@@ -1,11 +1,11 @@
 {
-  "loading": "Lädt...",
-  "loadingDescription": "Daten werden geladen, bitte warten",
+  "loading": "Wird geladen...",
+  "loadingDescription": "Preisregel‑Informationen werden geladen",
   "list": {
     "title": "Preisregeln",
-    "description": "Preisregeln verwalten und bearbeiten",
-    "add": "Neue Regel hinzufügen",
-    "empty": "Noch keine Preisregel definiert"
+    "description": "Verwalten Sie Preisregeln und deren Positionen",
+    "add": "Regel hinzufügen",
+    "empty": "Keine Preisregeln"
   },
   "table": {
     "ruleCode": "Regelcode",
@@ -60,13 +60,13 @@
   "salesmen": {
     "title": "Verkäufer",
     "addSuccess": "Verkäufer hinzugefügt",
-    "addSuccessMessage": "Verkäufer erfolgreich zur Preisregel hinzugefügt",
-    "addError": "Fehler",
-    "addErrorMessage": "Fehler beim Hinzufügen des Verkäufers",
-    "deleteSuccess": "Verkäufer entfernt",
-    "deleteSuccessMessage": "Verkäufer erfolgreich aus der Preisregel entfernt",
-    "deleteError": "Fehler",
-    "deleteErrorMessage": "Fehler beim Entfernen des Verkäufers",
+    "addSuccessMessage": "Der Verkäufer wurde erfolgreich hinzugefügt",
+    "addError": "Fehler beim Hinzufügen",
+    "addErrorMessage": "Der Verkäufer konnte nicht hinzugefügt werden",
+    "deleteSuccess": "Verkäufer gelöscht",
+    "deleteSuccessMessage": "Der Verkäufer wurde erfolgreich gelöscht",
+    "deleteError": "Fehler beim Löschen",
+    "deleteErrorMessage": "Der Verkäufer konnte nicht gelöscht werden",
     "add": "Verkäufer hinzufügen",
     "empty": "Noch kein Verkäufer hinzugefügt",
     "emptyDescription": "Gilt für alle Verkäufer",
@@ -79,66 +79,66 @@
     "validFrom": "Gültig ab",
     "validTo": "Gültig bis",
     "customer": "Kunde",
-    "erpCustomerCode": "ERP-Kundencode",
+    "erpCustomerCode": "ERP‑Kundencode",
     "branchCode": "Filialcode",
     "currencyCode": "Währung",
-    "priceIncludesVat": "Inkl. MwSt.",
+    "priceIncludesVat": "MwSt. enthalten",
     "isActive": "Aktiv",
     "ruleTypePlaceholder": "Regeltyp auswählen",
     "validToMustBeAfterValidFrom": "Enddatum muss nach dem Startdatum liegen",
     "ruleCodePlaceholder": "Regelcode eingeben",
     "ruleNamePlaceholder": "Regelname eingeben",
-    "customerPlaceholder": "Kunde auswählen (Optional)",
+    "customerPlaceholder": "Kunde eingeben",
     "selectCustomer": "Kunde auswählen",
-    "branchCodePlaceholder": "Filialcode (Optional)",
-    "selectCurrency": "Bitte Währung auswählen"
+    "branchCodePlaceholder": "Filialcode eingeben",
+    "selectCurrency": "Währung auswählen"
   },
   "ruleType": {
-    "demand": "Nachfrage",
+    "demand": "Anfrage",
     "quotation": "Angebot",
     "order": "Bestellung",
     "unknown": "Unbekannt"
   },
   "lines": {
-    "title": "Preisregelzeilen",
-    "add": "Zeile hinzufügen",
-    "empty": "Noch keine Zeile hinzugefügt",
-    "stokCode": "Bestandscode",
-    "minQuantity": "Min. Menge",
-    "maxQuantity": "Max. Menge",
+    "title": "Positionen",
+    "add": "Position hinzufügen",
+    "empty": "Keine Positionen",
+    "stokCode": "Lagercode",
+    "minQuantity": "Mindestmenge",
+    "maxQuantity": "Maximalmenge",
     "fixedUnitPrice": "Fester Stückpreis",
-    "discount1": "Rabatt 1 %",
-    "discount2": "Rabatt 2 %",
-    "discount3": "Rabatt 3 %",
-    "discount1Rate": "Rabattatz 1",
-    "discount1Amount": "Rabattbetrag 1",
-    "discount2Rate": "Rabattatz 2",
-    "discount2Amount": "Rabattbetrag 2",
-    "discount3Rate": "Rabattatz 3",
-    "discount3Amount": "Rabattbetrag 3",
-    "minQuantityMin": "Mindestmenge darf nicht kleiner als 0 sein",
-    "minQuantityMax": "Maximale Menge ist zu groß",
-    "maxQuantityMin": "Maximale Menge muss größer als 0 sein",
-    "maxQuantityMustBeGreaterThanMin": "Maximale Menge muss größer als Mindestmenge sein",
-    "fixedUnitPriceMin": "Stückpreis muss größer als 0 sein",
-    "required": "Mindestens eine Zeile muss hinzugefügt werden",
-    "selectStock": "Bestand auswählen",
+    "discount1": "Rabatt 1",
+    "discount2": "Rabatt 2",
+    "discount3": "Rabatt 3",
+    "discount1Rate": "Rabatt 1‑Satz",
+    "discount1Amount": "Rabatt 1‑Betrag",
+    "discount2Rate": "Rabatt 2‑Satz",
+    "discount2Amount": "Rabatt 2‑Betrag",
+    "discount3Rate": "Rabatt 3‑Satz",
+    "discount3Amount": "Rabatt 3‑Betrag",
+    "minQuantityMin": "Mindestmenge muss größer als 0 sein",
+    "minQuantityMax": "Mindestmenge muss kleiner als die Maximalmenge sein",
+    "maxQuantityMin": "Maximalmenge muss größer als 0 sein",
+    "maxQuantityMustBeGreaterThanMin": "Maximalmenge muss größer als die Mindestmenge sein",
+    "fixedUnitPriceMin": "Fester Stückpreis muss größer als 0 sein",
+    "required": "Pflichtfeld",
+    "selectStock": "Lager auswählen",
     "selectProduct": "Produkt auswählen",
-    "stokCodePlaceholder": "Produktcode",
-    "stokCodeRequired": "Bestandscode ist erforderlich",
-    "minQuantityRequired": "Min. Menge ist erforderlich und darf nicht kleiner als 0 sein",
-    "maxQuantityRequired": "Max. Menge ist erforderlich und muss größer als 0 sein",
-    "fixedUnitPriceRequired": "Listenpreis ist erforderlich und muss größer als 0 sein",
-    "currencyCodeRequired": "Währungstyp ist erforderlich",
+    "stokCodePlaceholder": "Lagercode eingeben",
+    "stokCodeRequired": "Lagercode ist erforderlich",
+    "minQuantityRequired": "Mindestmenge ist erforderlich",
+    "maxQuantityRequired": "Maximalmenge ist erforderlich",
+    "fixedUnitPriceRequired": "Fester Stückpreis ist erforderlich",
+    "currencyCodeRequired": "Währung ist erforderlich",
     "selectCurrency": "Währung auswählen",
     "minQuantityInvalid": "Ungültige Mindestmenge",
-    "minQuantityInvalidMessage": "Mindestmenge darf nicht kleiner als 0 sein"
+    "minQuantityInvalidMessage": "Bitte eine gültige Mindestmenge eingeben"
   },
   "card": {
     "customer": "Kunde",
-    "lines": "Zeilen",
+    "lines": "Positionen",
     "salesmen": "Verkäufer",
-    "vatIncluded": "Inkl. MwSt."
+    "vatIncluded": "MwSt. enthalten"
   },
   "status": {
     "active": "Aktiv",
