--- a/src/locales/de/product-pricing-group-by-management.json
+++ b/src/locales/de/product-pricing-group-by-management.json
@@ -49,8 +49,8 @@
   "discount2Range": "Rabatt 2 muss zwischen 0 und 100 liegen",
   "discount3Range": "Rabatt 3 muss zwischen 0 und 100 liegen",
   "enterErpGroupCode": "ERP-Produktgruppencode eingeben",
-    "selectErpGroupCode": "Gruppe auswählen",
-    "selectCurrency": "Bitte Währung auswählen",
+  "selectErpGroupCode": "Gruppe auswählen",
+  "selectCurrency": "Bitte Währung auswählen",
   "enterListPrice": "Listenpreis eingeben",
   "enterCostPrice": "Kostenpreis eingeben",
   "enterDiscount1": "Rabatt 1 eingeben (0-100, Optional)",
@@ -71,10 +71,10 @@
   "maxPrice": "Höchstpreis",
   "minDiscount": "Mindestrabatt",
   "maxDiscount": "Maximalrabatt",
-  "percentage": "%",
+  "percentage": "Prozentsatz",
   "try": "Türkische Lira",
   "usd": "US-Dollar",
-  "eur": "Euro",
+  "eur": "EUR",
   "gbp": "Britisches Pfund",
   "jpy": "Japanischer Yen",
   "calculateFinalPrice": "Endpreis berechnen",
