--- a/src/locales/de/product-pricing-management.json
+++ b/src/locales/de/product-pricing-management.json
@@ -80,10 +80,10 @@
   "maxPrice": "Höchstpreis",
   "minDiscount": "Mindestrabatt",
   "maxDiscount": "Maximalrabatt",
-  "percentage": "%",
+  "percentage": "Prozentsatz",
   "try": "Türkische Lira",
   "usd": "US-Dollar",
-  "eur": "Euro",
+  "eur": "EUR",
   "gbp": "Britisches Pfund",
   "jpy": "Japanischer Yen",
   "calculateFinalPrice": "Endpreis berechnen",
@@ -97,9 +97,9 @@
   "checkingDuplicate": "Wird geprüft...",
   "noDuplicate": "Diese Kombination ist verfügbar",
   "selectStokCode": "Lager auswählen",
-    "selectStok": "Lager auswählen",
-    "erpGroupCodePlaceholder": "Wird automatisch ausgefüllt, wenn Lager ausgewählt ist",
-    "profitAmount": "Gewinnbetrag",
+  "selectStok": "Lager auswählen",
+  "erpGroupCodePlaceholder": "Wird automatisch ausgefüllt, wenn Lager ausgewählt ist",
+  "profitAmount": "Gewinnbetrag",
   "profitPercentage": "Gewinnprozentsatz",
   "searchProductCode": "Produktcode suchen",
   "searchGroupCode": "Gruppencode suchen",
