--- a/src/locales/de/quotation-line-management.json
+++ b/src/locales/de/quotation-line-management.json
@@ -1,6 +1,6 @@
 {
   "title": "Angebotszeilen-Verwaltung",
-  "description": "Angebotszeilen verwalten und bearbeiten",
+  "description": "Beschreibung",
   "create": "Neue Angebotszeile",
   "createDescription": "Geben Sie die neuen Angebotszeileninformationen ein",
   "edit": "Angebotszeile bearbeiten",
@@ -23,7 +23,6 @@
   "vatAmount": "MwSt.-Betrag",
   "lineTotal": "Zeilensumme (exkl. MwSt.)",
   "lineGrandTotal": "Zeilensumme (inkl. MwSt.)",
-  "description": "Beschreibung",
   "createdDate": "Erstellungsdatum",
   "updatedDate": "Aktualisierungsdatum",
   "actions": "Aktionen",
@@ -97,7 +96,7 @@
   "maxLineTotal": "Höchstzeilensumme",
   "minLineGrandTotal": "Mindestgesamtsumme",
   "maxLineGrandTotal": "Höchstgesamtsumme",
-  "percentage": "%",
+  "percentage": "Prozentsatz",
   "getByQuotation": "Nach Angebot abrufen",
   "allLines": "Alle Zeilen",
   "linesForQuotation": "Angebotszeilen",
