--- a/src/locales/de/stock.json
+++ b/src/locales/de/stock.json
@@ -1,79 +1,79 @@
 {
   "list": {
-    "title": "Lagerverwaltung",
-    "description": "Bestände anzeigen und verwalten",
-    "syncedFromErp": "Bestände werden automatisch aus dem ERP-System synchronisiert",
-    "search": "Nach Bestandsname oder ERP-Code suchen...",
+    "title": "Produkte",
+    "description": "Verwalten Sie Produkte, die mit dem ERP synchronisiert sind",
+    "syncedFromErp": "Aus ERP synchronisiert",
+    "search": "Suchen",
     "id": "ID",
-    "erpStockCode": "ERP-Bestandscode",
-    "stockName": "Bestandsname",
+    "erpStockCode": "ERP‑Lagercode",
+    "stockName": "Produktname",
     "unit": "Einheit",
     "actions": "Aktionen",
-    "viewDetail": "Details",
-    "showing": "{{from}}-{{to}} / {{total}} angezeigt",
-    "page": "Seite {{current}} / {{total}}",
+    "viewDetail": "Details anzeigen",
+    "showing": "Anzeige",
+    "page": "Seite",
     "noData": "Keine Datensätze gefunden",
-    "previous": "Vorherige",
-    "next": "Nächste"
+    "previous": "Zurück",
+    "next": "Weiter"
   },
   "detail": {
-    "title": "Bestandsdetails",
+    "title": "Produktdetails",
     "basicInfo": "Grundinformationen",
-    "basicInfoReadonly": "Grundinformationen werden aus dem ERP-System synchronisiert und können nicht geändert werden",
+    "basicInfoReadonly": "Grundinformationen (nur Lesen)",
     "images": "Bilder",
-    "relations": "Verwandte Bestände",
+    "relations": "Beziehungen",
     "save": "Speichern",
     "cancel": "Abbrechen",
     "created": "Erstellt",
     "updated": "Aktualisiert",
     "copied": "Kopiert",
     "copy": "Kopieren",
-    "notFound": "Bestand nicht gefunden",
+    "notFound": "Produkt nicht gefunden",
     "backToStockList": "Zurück zur Liste",
     "gallery": "Galerie",
-    "mainInfo": "Basisdaten",
-    "groupInfo": "Gruppierung und Standort",
+    "mainInfo": "Hauptinformationen",
+    "groupInfo": "Gruppeninformationen",
     "specialCodes": "Spezialcodes",
     "ureticiKodu": "Herstellercode",
-    "grup": "Gruppeninfo",
+    "grup": "Gruppe",
     "branchCode": "Filialcode",
-    "kod1": "CODE 1",
-    "kod2": "CODE 2",
-    "kod3": "CODE 3",
-    "kod4": "CODE 4",
-    "kod5": "CODE 5",
+    "kod1": "Code 1",
+    "kod2": "Code 2",
+    "kod3": "Code 3",
+    "kod4": "Code 4",
+    "kod5": "Code 5",
     "summary": "Schnellansicht",
     "subtitle": "Bestandsdetailverwaltung",
-    "notFoundDesc": "Der gesuchte Bestandsdatensatz wurde möglicherweise gelöscht oder nie erstellt.",
+    "notFoundDesc": "Das angeforderte Produkt existiert nicht",
     "addRelation": "Verbindung hinzufügen",
-    "erpStockCode": "ERP-Bestandscode",
-    "stockName": "Bestandsname",
+    "erpStockCode": "ERP‑Lagercode",
+    "stockName": "Produktname",
     "unit": "Einheit",
-    "htmlDescription": "HTML-Beschreibung",
-    "htmlDescriptionPlaceholder": "HTML-Beschreibung eingeben",
-    "htmlDescription.required": "HTML-Beschreibung ist erforderlich",
-    "technicalSpecs": "Technische Spezifikationen (JSON)",
-    "technicalSpecsPlaceholder": "Technische Spezifikationen im JSON-Format (optional)"
+    "htmlDescription": "HTML‑Beschreibung",
+    "htmlDescriptionPlaceholder": "HTML‑Beschreibung eingeben",
+    "htmlDescription.required": "HTML‑Beschreibung ist erforderlich",
+    "technicalSpecs": "Technische Spezifikationen",
+    "technicalSpecsPlaceholder": "Technische Spezifikationen eingeben"
   },
   "images": {
-    "upload": "Bilder hierher ziehen oder klicken",
-    "uploadHint": "Mehrfachauswahl wird unterstützt",
-    "uploadButton": "Bilder hochladen",
+    "upload": "Hochladen",
+    "uploadHint": "Bilder ziehen und ablegen oder klicken, um auszuwählen",
+    "uploadButton": "Datei auswählen",
     "selectedFiles": "Ausgewählte Dateien",
-    "altText": "Alt-Text (optional)",
+    "altText": "Alternativtext",
     "primary": "Primär",
     "setPrimary": "Als primär festlegen",
     "delete": "Löschen",
-    "noImages": "Noch keine Bilder hochgeladen",
+    "noImages": "Keine Bilder",
     "deleteConfirm": "Bild löschen",
-    "deleteConfirmMessage": "Sind Sie sicher, dass Sie dieses Bild löschen möchten?"
+    "deleteConfirmMessage": "Möchten Sie dieses Bild wirklich löschen?"
   },
   "relations": {
-    "add": "Verwandten Bestand hinzufügen",
-    "relatedStock": "Verwandter Bestand",
-    "relatedStock.required": "Auswahl eines verwandten Bestands ist erforderlich",
+    "add": "Beziehung hinzufügen",
+    "relatedStock": "Zugehöriges Produkt",
+    "relatedStock.required": "Zugehöriges Produkt ist erforderlich",
     "quantity": "Menge",
-    "quantity.positive": "Menge muss eine positive Zahl sein",
+    "quantity.positive": "Die Menge muss eine positive Zahl sein",
     "description": "Beschreibung",
     "descriptionPlaceholder": "Beschreibung eingeben (optional)",
     "isMandatory": "Pflicht",
