--- a/src/locales/de/user-discount-limit-management.json
+++ b/src/locales/de/user-discount-limit-management.json
@@ -1,61 +1,61 @@
 {
   "title": "Benutzer-Rabattlimit-Verwaltung",
   "description": "Benutzer-Rabattlimits verwalten und bearbeiten",
-  "create": "Neues Rabattlimit",
-  "edit": "Rabattlimit bearbeiten",
-  "editDescription": "Rabattlimit-Informationen bearbeiten",
-  "createDescription": "Geben Sie die neuen Rabattlimit-Informationen ein",
+  "create": "Erstellen",
+  "edit": "Bearbeiten",
+  "editDescription": "Aktualisieren Sie die Rabattlimits für Verkäufer und Produktgruppen.",
+  "createDescription": "Legen Sie Rabattlimits für Verkäufer und Produktgruppen fest.",
   "delete": "Löschen",
   "deleteTitle": "Rabattlimit löschen",
-  "salesperson": "Vertriebsmitarbeiter",
-  "erpProductGroupCode": "ERP-Produktgruppencode",
+  "salesperson": "Verkäufer",
+  "erpProductGroupCode": "ERP‑Produktgruppencode",
   "maxDiscount1": "Max. Rabatt 1",
   "maxDiscount2": "Max. Rabatt 2",
   "maxDiscount3": "Max. Rabatt 3",
-  "salespersonName": "Name des Vertriebsmitarbeiters",
+  "salespersonName": "Verkäufername",
   "createdDate": "Erstellungsdatum",
   "updatedDate": "Aktualisierungsdatum",
   "actions": "Aktionen",
-  "search": "Suche",
-  "filterBySalesperson": "Nach Vertriebsmitarbeiter filtern",
-  "filterByGroup": "Nach Produktgruppe filtern",
-  "filterByDiscount": "Nach Rabattbereich filtern",
-  "noData": "Keine Daten gefunden",
-  "confirmDelete": "Möchten Sie dieses Rabattlimit wirklich löschen?",
-  "createSuccess": "Rabattlimit erfolgreich erstellt",
-  "updateSuccess": "Rabattlimit erfolgreich aktualisiert",
+  "search": "Suchen",
+  "filterBySalesperson": "Nach Verkäufer filtern",
+  "filterByGroup": "Nach Gruppe filtern",
+  "filterByDiscount": "Nach Rabatt filtern",
+  "noData": "Keine Daten",
+  "confirmDelete": "Möchten Sie diesen Eintrag wirklich löschen?",
+  "createSuccess": "Rabattlimit erstellt",
+  "updateSuccess": "Rabattlimit aktualisiert",
   "deleteSuccess": "Rabattlimit erfolgreich gelöscht",
-  "createError": "Fehler beim Erstellen des Rabattlimits",
-  "updateError": "Fehler beim Aktualisieren des Rabattlimits",
-  "deleteError": "Fehler beim Löschen des Rabattlimits",
-  "alreadyExists": "Für diese Kombination aus Vertriebsmitarbeiter und Produktgruppe existiert bereits ein Rabattlimit",
-  "salespersonRequired": "Auswahl des Vertriebsmitarbeiters ist erforderlich",
-  "erpProductGroupCodeRequired": "ERP-Produktgruppencode ist erforderlich",
-  "erpProductGroupCodeMaxLength": "ERP-Produktgruppencode darf maximal 50 Zeichen lang sein",
-  "maxDiscount1Required": "Maximaler Rabatt 1 ist erforderlich",
-  "maxDiscount1Range": "Maximaler Rabatt 1 muss zwischen 0 und 100 liegen",
-  "maxDiscount2Range": "Maximaler Rabatt 2 muss zwischen 0 und 100 liegen",
-  "maxDiscount3Range": "Maximaler Rabatt 3 muss zwischen 0 und 100 liegen",
-  "selectSalesperson": "Vertriebsmitarbeiter auswählen",
-  "enterErpProductGroupCode": "ERP-Produktgruppencode eingeben",
-  "enterMaxDiscount1": "Max. Rabatt 1 eingeben (0-100)",
-  "enterMaxDiscount2": "Max. Rabatt 2 eingeben (0-100, Optional)",
-  "enterMaxDiscount3": "Max. Rabatt 3 eingeben (0-100, Optional)",
-  "loading": "Lädt...",
+  "createError": "Rabattlimit konnte nicht erstellt werden",
+  "updateError": "Rabattlimit konnte nicht aktualisiert werden",
+  "deleteError": "Rabattlimit konnte nicht gelöscht werden",
+  "alreadyExists": "Für diesen Verkäufer und diese Gruppe existiert bereits ein Rabattlimit",
+  "salespersonRequired": "Verkäufer ist erforderlich",
+  "erpProductGroupCodeRequired": "ERP‑Produktgruppencode ist erforderlich",
+  "erpProductGroupCodeMaxLength": "ERP‑Produktgruppencode ist zu lang",
+  "maxDiscount1Required": "Max. Rabatt 1 ist erforderlich",
+  "maxDiscount1Range": "Max. Rabatt 1 muss zwischen 0 und 100 liegen",
+  "maxDiscount2Range": "Max. Rabatt 2 muss zwischen 0 und 100 liegen",
+  "maxDiscount3Range": "Max. Rabatt 3 muss zwischen 0 und 100 liegen",
+  "selectSalesperson": "Verkäufer auswählen",
+  "enterErpProductGroupCode": "ERP‑Produktgruppencode eingeben",
+  "enterMaxDiscount1": "Max. Rabatt 1 eingeben",
+  "enterMaxDiscount2": "Max. Rabatt 2 eingeben",
+  "enterMaxDiscount3": "Max. Rabatt 3 eingeben",
+  "loading": "Wird geladen...",
   "previous": "Zurück",
   "next": "Weiter",
-  "saving": "Speichern...",
+  "saving": "Wird gespeichert...",
   "save": "Speichern",
   "cancel": "Abbrechen",
   "close": "Schließen",
-  "clearFilters": "Filter löschen",
+  "clearFilters": "Filter zurücksetzen",
   "applyFilters": "Filter anwenden",
-  "minDiscount": "Mindestrabatt",
-  "maxDiscount": "Maximalrabatt",
-  "percentage": "%",
-  "getBySalesperson": "Nach Vertriebsmitarbeiter abrufen",
-  "getByGroup": "Nach Produktgruppe abrufen",
-  "getBySalespersonAndGroup": "Nach Vertriebsmitarbeiter und Gruppe abrufen",
+  "minDiscount": "Min. Rabatt",
+  "maxDiscount": "Max. Rabatt",
+  "percentage": "Prozentsatz",
+  "getBySalesperson": "Nach Verkäufer abrufen",
+  "getByGroup": "Nach Gruppe abrufen",
+  "getBySalespersonAndGroup": "Nach Verkäufer und Gruppe abrufen",
   "table": {
     "id": "ID",
     "salespersonName": "Name des Vertriebsmitarbeiters",
